Fix cell alignment

--- a/src/styles/Cell.module.css
+++ b/src/styles/Cell.module.css
@@ -1,5 +1,6 @@
 .container {
 	text-align: center;
+	vertical-align: top;
 }
 .label {
 }
